--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "praktikum mesto",
+  "name": "praktikum-mesto",
   "version": "1.0.0",
   "description": "project mesto praktikum",
   "main": "index.js",
